fix(context-selector): left aligned footer (#3978)

--- a/src/patternfly/components/ContextSelector/context-selector.scss
+++ b/src/patternfly/components/ContextSelector/context-selector.scss
@@ -150,7 +150,6 @@
 
 .pf-c-context-selector__menu-footer {
   padding: var(--pf-c-context-selector__menu-footer--PaddingTop) var(--pf-c-context-selector__menu-footer--PaddingRight) var(--pf-c-context-selector__menu-footer--PaddingBottom) var(--pf-c-context-selector__menu-footer--PaddingLeft);
-  text-align: right;
   box-shadow: var(--pf-c-context-selector__menu-footer--BoxShadow);
 }
 
